--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <tr>
       <td>python</td>
       <td>⭐⭐</td>
-      <td>html</td>
+      <td>Java Script</td>
       <td>⭐</td>
     </tr>
   </table>
