--- a/index.html
+++ b/index.html
@@ -1,107 +1,67 @@
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
-  <!-- TABS NAME -->
-  <title>Shubham's Personal Sites</title>
+  <title>Shubham Gagare</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+
 </head>
 
-<!-- Putting image and text side by side with help of tables -->
-
 <body>
-  <table cellspacing = "20">
-    <tr>
-      <td><!--My image from local folder  -->
-      <img style="border:1px solid black;" src="shubham-modified.png" width="150" height="150" alt="Shubham Profile photo"></td>
-      <td>
-        <!-- HEADER -->
-        <h1>SHUBHAM GAGARE</h1>
-        <h2>Student at Qspiders</h2>
-        <!-- paragraph with bold and italic text format-->
-        <p><em>This is <strong>Italic</strong> text</em></p>
-        <p>This is paragraph about what am doing right now and other things.</p>
-        <!-- HORIZONTAL line -->
-        <hr>
-      </td>
-    </tr>
-  </table>
+
+  <div class="top-container">
+    <img class="top-cloud" src="Images/cloud.png" alt="cloud-img">
+    <h1><b>I'm Shubham.</b></h1>
+    <h2>A <span class="pro">Pro</span>grammer.</h2>
+    <img class="bottom-cloud" src="Images/cloud.png" alt="cloud-img">
+    <img src="Images/mountain.png" alt="mountain-img">
+  </div>
+
+  <div class="middle-container">
+    <div class="profile">
+      <img height="200px" width="200px" src="Images\shubham-modified.png" alt="Shubham-Img">
+      <h2>Hello.</h2>
+      <p>I am webdeveloper, I am founder and CTO of 3dpseeker. I ♥ Tea.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="com_design" src="Images/design.png" alt="Computer Images">
+        <h3>Design & Development</h3>
+        <p>I started learning to code when I was 12 years old because I
+          wanted to make my own video games. Over time, I have gained a
+          wealth of experience designing and developing mobile and web
+          applications.</p>
+      </div>
+      <div class="skill-row">
+        <img class="chilli_design" src="Images/chillies.png" alt="chillies">
+        <h3>Hot Wings Challenge</h3>
+        <p>But my best skill is actually in eating hot wings. I am the undisputed queen of hot wing challenges. Ghost Peppers and Carolina Reapers are my favourite snacks.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>If you love tea as much as I do.</h3>
+      <p style="margin-bottom: 30px;">If you love tea as much as I do?  Lets talk about it on katta. <br> Contact me with below links.</p>
+      <a class="btn" href="mailto:shubhamd.gagare@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
 
 
-  </ul>
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p style="color:#EAF6F6;">© Shubham Gagare.</p>
+  </div>
 
-  <hr>
-
-  <h3>SKILLS</h3>
-  <!-- table for skills -->
-  <table border="1">
-    <tr>
-      <td>SQL</td>
-      <td>⭐⭐⭐⭐⭐</td>
-      <td>java</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>python</td>
-      <td>⭐⭐</td>
-      <td>Java Script</td>
-      <td>⭐</td>
-    </tr>
-  </table>
-
-  <!-- Table for education -->
-  <h3>EDUCATION</h3>
-  <!-- FOR CREATING TABLE BORDER  -->
-  <table border="1">
-    <thead>
-      <!-- table row -->
-      <tr>
-        <!-- HEAder and footer in table we are currently using header for column name -->
-        <th>Institute</th>
-        <th>University</th>
-        <th>Percentage</th>
-        <th>Year of Passout</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <!-- table data td filling in rows -->
-        <td>Indira Collage of Engineering</td>
-        <td>SPPU</td>
-        <td>65.89 %</td>
-        <td>2020</td>
-      </tr>
-      <tr>
-        <td>RMD collage of polytechnique</td>
-        <td>MSBTE</td>
-        <td>76.66 %</td>
-        <td>2013</td>
-      </tr>
-      <tr>
-        <td>Shrim. Laxmibai tapkir school</td>
-        <td>SSC</td>
-        <td>79.80</td>
-        <td>2010</td>
-      </tr>
-    </tbody>
-
-  </table>
-
-  <hr>
-
-  <!-- anchor tag to attach url to text -->
-  <h3>Social Media Handles</h3>
-
-  <ul>
-    <li><a href="https://www.google.com/">Google</a></li>
-    <li><a href="https://www.facebook.com/">Fb</a></li>
-    <li><a href="https://www.instagram.com/?hl=en">Insta</a></li>
-  </ul>
-  <hr>
-
-
-  <!-- adding new page in 1 html -->
-  <h3><a href="Hobbies.html">Hobbies</a></h3>
-  <h3><a href="contact_us.html">Contact Us</a></h3>
 </body>
 
 </html>
