--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Shubham Gagare</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,16 +15,16 @@
 <body>
 
   <div class="top-container">
-    <img class="top-cloud" src="Images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="cloud.png" alt="cloud-img">
     <h1><b>I'm Shubham.</b></h1>
     <h2>A <span class="pro">Pro</span>grammer.</h2>
-    <img class="bottom-cloud" src="Images/cloud.png" alt="cloud-img">
-    <img src="Images/mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+    <img src="mountain.png" alt="mountain-img">
   </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img height="200px" width="200px" src="Images\shubham-modified.png" alt="Shubham-Img">
+      <img height="200px" width="200px" src="shubham-modified.png" alt="Shubham-Img">
       <h2>Hello.</h2>
       <p>I am webdeveloper, I am founder and CTO of 3dpseeker. I ♥ Tea.</p>
     </div>
@@ -32,7 +32,7 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="com_design" src="Images/design.png" alt="Computer Images">
+        <img class="com_design" src="design.png" alt="Computer Images">
         <h3>Design & Development</h3>
         <p>I started learning to code when I was 12 years old because I
           wanted to make my own video games. Over time, I have gained a
@@ -40,7 +40,7 @@
           applications.</p>
       </div>
       <div class="skill-row">
-        <img class="chilli_design" src="Images/chillies.png" alt="chillies">
+        <img class="chilli_design" src="chillies.png" alt="chillies">
         <h3>Hot Wings Challenge</h3>
         <p>But my best skill is actually in eating hot wings. I am the undisputed queen of hot wing challenges. Ghost Peppers and Carolina Reapers are my favourite snacks.</p>
       </div>
