--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/shubham-gagare-656b17163">LinkedIn</a>
+    <a style="margin 0 10px;" class="footer-link" href="mailto:shubhamd.gagare@gmail.com">shubhamd.gagare@gmail.com</a>
+    <a class="footer-link" href="https://github.com/Shubhamdgagare/cv.git">Github</a>
     <p style="color:#EAF6F6;">© Shubham Gagare.</p>
   </div>
 
