--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Shubham Gagare</title>
   <link rel="stylesheet" href="./styles.css">
-  <link rel="icon" href="./favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
@@ -19,14 +19,14 @@
     <h1><b>I'm Shubham.</b></h1>
     <h2>A <span class="pro">Pro</span>grammer.</h2>
     <img class="bottom-cloud" src="./cloud.png" alt="cloud-img">
-    <img src="mountain.png" alt="./mountain-img">
+    <img src="./mountain.png" alt="mountain-img">
   </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img height="200px" width="200px" src="./shubham-modified.png" alt="Shubham-Img">
+      <img id="shubhamimg" height="200px" width="200px" src="./shubham-modified.png" alt="Shubham-Img">
       <h2>Hello.</h2>
-      <p>I am webdeveloper, I am founder and CTO of 3dpseeker. I ♥ Tea.</p>
+      <p class="intro">I am Web Developer. I am founder and CTO of 3dpseeker. I ♥ Tea.</p>
     </div>
     <hr>
     <div class="skills">
@@ -49,17 +49,24 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>If you love tea as much as I do.</h3>
-      <p style="margin-bottom: 30px;">If you love tea as much as I do?  Lets talk about it on katta. <br> Contact me with below links.</p>
+      <p class="contact-message" style="margin-bottom: 30px;">If you love tea as much as I do?  Lets talk about it on katta. Contact me with below links.</p>
       <a class="btn" href="mailto:shubhamd.gagare@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
 
   <div class="bottom-container">
+
+    <div class="foolink"></div>
+
     <a class="footer-link" href="https://www.linkedin.com/in/shubham-gagare-656b17163">LinkedIn</a>
-    <a style="margin 0 10px;" class="footer-link" href="mailto:shubhamd.gagare@gmail.com">shubhamd.gagare@gmail.com</a>
+    <u style="color: #11999E;"><a class="footer-link" href="mailto:shubhamd.gagare@gmail.com">shubhamd.gagare@gmail.com</a></u>
     <a class="footer-link" href="https://github.com/Shubhamdgagare/cv.git">Github</a>
-    <p style="color:#EAF6F6;">© Shubham Gagare.</p>
+
+    <div class="foolink1"></div>
+
+    <p class="copyright">© Shubham Gagare.</p>
+
   </div>
 
 </body>
